# sv_qtouch

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  launch.vs.json
doc/: glsl_example.h  glsl_example_simple.h  notes.txt  todo.txt
doc/exampletestproject/: glsl_example.h  glsl_example_simple.h  project.json
doc/exampletestproject/presets/: first.json  newA.json  newA.varnames_packet  newA.vec4_packet  newB.json  newB.varnames_packet  newB.vec4_packet  newC.json  newC.varnames_packet  newC.vec4_packet  second.json
doc/testworkfolder/presets/: presetA.json  presetB.json  presetC.json
src/: GLSLNativeTypes.cpp  GLSLNativeTypes.h  GlslStructParser.cpp  GlslStructParser.h  QTouchApp.cpp  QTouchApp.h  QTouchDefs.h  RunningTests.h  TreeAndWidgetsBuilder.cpp  TreeAndWidgetsBuilder.h  Utils.h  hi.cpp  hi.h  main.cpp  notes.txt  todo.txt
src/DataToTDFormat/: TDFormatConverterInterface.h  TDFormatConverterSystem.cpp  TDFormatConverterSystem.h  TDFormatConverters.h  TDFormatDefs.h  TDFormatTreeConverter.cpp  TDFormatTreeConverter.h
src/Registrations/: QTouchRegistrations.cpp  QTouchRegistrations.h  TDFormatConverters.h
src/Registrations/Tests/: TDFormatConversionTest.cpp
src/SUP_Data/: SUP_Arglist.cpp  SUP_Arglist.h  SUP_ArglistParser.cpp  SUP_ArglistParser.h  SUP_Data.cpp  SUP_Data.h  SUP_DataParser.cpp  SUP_DataParser.h  SUP_NativeGLSLTypeConverter.cpp  SUP_NativeGLSLTypeConverter.h
src/SUP_Data/Tests/: ArglistParserTests.cpp  NativeGLSLTypeConverterTests.cpp
src/Tests/: FinalAppTest.cpp
src/TouchdesignerCommunication/: PacketDefs.h  Packets.h  TDTcpClient.h
src/UIComponents/: TopLevelWidgetsContainer.cpp  TopLevelWidgetsContainer.h
src/UIComponents/Presets/: PresetFIleView.cpp  PresetFileSystemModel.cpp  PresetFileSystemModel.h  PresetFileView.h  PresetTab.cpp  PresetTab.h
